<resources>
    <string name="app_name">GeoEspol</string>
    <string name="app_package">com.geoespol</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="about_activity">About</string>
	<string name="usuario_espol">Usuario Espol</string>
	<string name="usuario_visitante">Visitante</string>
	<string name="username">Usuario:</string>
	<string name="password">Contraseña</string>
	<string name="login">Login</string>
	<string name="title">Sistema de Geolocalización de Espol</string>
	<string name="copyright">Derechos Reservados 2013</string>
	<string name="espol">Escuela Superior Politécnica del Litoral</string>
	<string name="mapa_activity">Mapa</string>
	<string name="main_tasks">Que quiere hacer?</string>
	<string name="error_create_table">Could not create some table</string>
	<string name="image_default">Image</string>
	<string name="untitled">Untitled</string>
	<string name="enableingWiFiSucceed">WiFi successfully enabled</string>
	<string name="database_failure">There was an problem with the database!</string>
	<string name="database_create_failed">failed to create the database! This application
		can\'t run without a SQLite dabatase!
	</string>
	<string name="not_implemented">function currently not implemented!</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="unknown">unknown</string>
	<string name="empty" />
	<string name="blank"></string>
	<string name="select_all">Select all</string>
	<string name="deselect_all">Deselect all</string>
	<string name="not_a_number">The value you entered (%1$s) is not a valid number!
	</string>
	<string name="general_all">All</string>
	<string name="about_app_revision">Revision</string>
	<string name="about_app_commit_date">Last commit</string>
	<string name="about_app_repository_url">Repository URL</string>
	<string-array name="wifi_states">
		<item>WiFi is being disabled</item>
		<item>WiFi disabled</item>
		<item>WiFi is being enabled</item>
		<item>WiFi is enabled</item>
		<item>WiFi state is unknown</item>
	</string-array>
	<string name="main_wifi_scan">WiFi Scan</string>
	<string name="main_export_db_label">Backup &amp; Restore</string>
	<string name="main_project_text">Projects</string>
	<string name="main_settings_option">Settings</string>
	<string name="main_loglevel_option">Log Level</string>
	<string name="main_menu_calibrate">Calibrate Sensors</string>
	<string name="main_utils">Utils</string>
	<string name="main_quickscan_button">Quick Scan!</string>
	<string name="quickscan_project_name">Quick Scan %s</string>
	<string name="quickscan_project_site_name">Quick Scan Site %s</string>
	<string name="main_quickscan_failed">Failed to start the Quick Scan: \n%s</string>
	<string name="main_start_auto_calibration_title">Sensor Auto Calibration</string>
	<string name="main_start_auto_calibration_message">This Application uses the Accelerometer to track
		your movement. To improve step detection, this should be calibrated to
		you and your device.\nIf you want to calibrate this later user Menu ->
		Utils -> Sensor Calibration.\n\nDo you want to start Sensor
		Calibration?
	</string>
	<string name="preferences_activity">Preferences</string>
	<string name="preferences_loglevel_text">Log Level</string>
	<string-array name="preferences_loglevels">
		<item>VERBOSE</item>
		<item>DEBUG</item>
		<item>INFO</item>
		<item>WARN</item>
		<item>ERROR</item>
		<item>ASSERT</item>
	</string-array>
	<string name="sample_scan_start_button_text">Start Scan</string>
	<string name="sample_scan_stop_button_text">Stop WiFi Scan</string>
	<string name="sample_scan_scanning_text">Scanning…</string>
	<string name="sample_scan_start_scan_failed">Starting the Scan failed!</string>
	<string name="sample_scan_enableing_wifi">WiFi is currently disabled, trying to enable it.
	</string>
	<string name="sample_scan_enableing_wifi_failed">Could not enable WiFi!</string>
	<string name="sample_scan_text_start">To start a WiFi scan, press the start
		button!\nThese are the last scan results:
	</string>
	<string name="sample_scan_stopped">\nWiFi scan stopped.</string>
	<string name="sample_scan_wifi_capabilities">Capabilities</string>
	<string name="sample_scan_wifi_ssid">SSID</string>
	<string name="sample_scan_wifi_bssid">BSSID</string>
	<string name="sample_scan_wifi_rssi">RSSI</string>
	<string name="sample_scan_wifi_frequency">Frequency</string>
	<string name="sample_scan_scan_finished">\nWiFi scan finished!</string>
	<string name="sample_scan_wifi_state">WiFi state: </string>
	<string name="sample_scan_supplicant_state">WiFi supplicant state: </string>
	<string name="filebrowser_parent_dir">Parent directory</string>
	<string name="filebrowser_dir">Directory</string>
	<string name="filebrowser_error_save">Couldn\'t save the file!</string>
	<string name="filebrowser_save">Save here</string>
	<string name="filebrowser_saved">Saved!</string>
	<string name="filebrowser_dialog_filename_title">Enter file name!</string>
	<string name="filebrowser_dialog_filename_message">Enter the file name for the file to save!</string>
	<string name="filebrowser_dialog_directory_title">Create directory!</string>
	<string name="filebrowser_dialog_directory_message">Enter the name for the directory to save!</string>
	<string name="file_ending">wcdb</string>
	<string name="filebrowser_label">File browser</string>
	<string name="filebrowser_new_dir">New directory</string>
	<string name="filebrowser_dircreate_failed">Could not create directory!</string>
	<string name="project_title">Project title</string>
	<string name="project_path">Project path</string>
	<string name="project_description">Project description</string>
	<string name="project_path_button">Open</string>
	<string name="project_path_default">.</string>
	<string name="project_new_location_button">add new survey site</string>
	<string name="project_not_found">Project could not be found!</string>
	<string name="project_save_button">save project</string>
	<string name="project_delete_button">delete project</string>
	<string name="project_saved">project saved!</string>
	<string name="project_save_failed">project could not be saved!</string>
	<string name="project_list">project list</string>
	<string name="project_delete_failed">could not delete project!</string>
	<string name="project_delete_success">project successfully deleted!</string>
	<string name="project_location">Project Site</string>
	<string name="project_addsite_button">add survey site</string>
	<string name="project_site_reset_zoom">Reset zoom/rotation</string>
	<string name="project_site_reset_position">reset position</string>
	<string name="project_site_load_failed">failed to load Project Site!</string>
	<string name="project_site_dialog_title_title">Project Site title</string>
	<string name="project_site_dialog_title_message">Please enter a title for the Project Site:</string>
	<string name="project_sites_text">Project Sites</string>
	<string name="project_site_menu_change_name">Change Title</string>
	<string name="project_site_saved">Project Site saved!</string>
	<string name="project_site_save_failed">Project Site could not be saved!</string>
	<string name="project_site_menu_save">Save Project Site</string>
	<string name="project_site_start_scan">Scan here!</string>
	<string name="project_site_wifiscan_start_failed">Failed to start a WiFi scan:\n%1$s</string>
	<string name="project_site_dialog_scanning_title">WiFi Scan</string>
	<string name="project_site_dialog_scanning_message">scanning for WiFi networks…</string>
	<string name="project_site_wifiscan_failed">The WiFi Scan encountered an error: %1$s</string>
	<string name="project_site_wifiscan_finished">%1$d SSIDs and %2$d BSSIDs found!</string>
	<string name="project_site_snap_user">Snap User to Grid</string>
	<string name="project_site_menu_change_size">Change Map Size</string>
	<string name="project_site_dialog_size_middle_text">x</string>
	<string name="project_site_dialog_size_title">Change map size</string>
	<string name="project_site_dialog_size_message">How large (in pixels) should the map be?</string>
	<string name="project_site_dialog_size_nan">Width and height must be numeric values!</string>
	<string name="project_site_dialog_size_finished">Map size set to %1$dx%2$d!</string>
	<string name="project_site_menu_set_background">Set Map Image</string>
	<string name="project_site_dialog_background_title">Map Image</string>
	<string name="project_site_dialog_background_message">Choose an image of a map, which should be used as
		the background:
	</string>
	<string name="project_site_dialog_background_path_button">choose image</string>
	<string name="project_site_dialog_background_default_path">/mnt/sdcard/</string>
	<string name="project_site_set_background_failed">Could not set background image: %1$s</string>
	<string name="project_site_calculate_ap_positions">Calculate AP positions</string>
	<string name="project_site_delete_drawable_title">Delete Element</string>
	<string name="project_site_delete_drawable_message">Do you really want to delete %1$s?</string>
	<string name="project_site_scanresults_persisting_title">Persisting WiFi Scan Results</string>
	<string name="project_site_scanresults_persisting_message">The WiFi scan results are beining processed and
		saved to the database. \nPlease be patient.
	</string>
	<string name="project_site_scanresults_persisted">WiFi scan results saved!</string>
	<string name="project_site_scanresults_not_persisted">WiFi scan results could not be saved:\n%1$s
	</string>
	<string name="project_site_dialog_fresh_site_title">Project Site Initial Setup</string>
	<string name="project_site_dialog_fresh_site_message">This fresh created project site does not have a map
		loaded, which would ease navigation. \nThis could also be done later
		unter Options -> Map Settings. \n\nDo you want to do that now?
	</string>
	<string name="project_site_create_failed">could not create Project Site!</string>
	<string name="project_site_set_scale_of_map">Set Map Scale</string>
	<string name="project_site_dialog_scale_of_map_title">Scale of map</string>
	<string name="project_site_dialog_scale_of_map_message">How many meters have you just marked on the map?
	</string>
	<string name="project_site_dialog_ask_change_scale_title">Change Scale of Map</string>
	<string name="project_site_dialog_ask_change_scale_message">We need to know how much pixels is one meter to
		calculate the correct positions of APs and track your
		movement.\n\nWould you like to define this now?
	</string>
	<string name="project_site_dialog_ask_north_title">Set North</string>
	<string name="project_site_dialog_ask_north_message">We need to know where the magnetic north is on the
		map to calculate the correct direction of your movement.\n\nWould you
		like to define this now?
	</string>
	<string name="project_site_dialog_change_scan_interval_title">Change WiFi Scan Interval</string>
	<string name="project_site_dialog_change_scan_interval_message">Define how often a WiFi scan should be done, if
		walking &amp; and scanning is enabled.\n\nScan Interval: %1$ds</string>
	<string name="project_site_dialog_change_size_width">width</string>
	<string name="project_site_dialog_change_size_height">height</string>
	<string name="project_site_triangulation_progress_title">Calculating Access Point positions</string>
	<string name="project_site_triangulation_progress_message">This may take a while.</string>
	<string name="project_site_triangulation_progress_message_ssid">This may take a while. Current SSID: </string>
	<string name="project_site_add_known_ap">Add known AP</string>
	<string name="project_site_dialog_add_known_ap_title">Add known AP</string>
	<string name="project_site_dialog_add_known_ap_message">Enter the SSID and BSSID of the known Access Point:
	</string>
</resources>