<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <LinearLayout 
        android:id="@+id/lyMain1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView 
            style="@style/title_activities"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_centerInParent="true"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
	        android:id="@+id/btnUsuarioEspol"
	        style="@style/button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/usuario_espol" />
        <Button 
            android:id="@+id/btnVisitante"
            style="@style/button"
            android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/usuario_visitante"/>
        
    </LinearLayout>
	<LinearLayout
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView 
	        android:textColor="#fff"
            android:textSize="12sp"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_espol"
            android:drawablePadding="10dp"
            android:text="@string/espol"
            android:gravity="center" />
	</LinearLayout>
</RelativeLayout>
