<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background" >
    <!-- Title -->
    <LinearLayout 
		android:id="@+id/lyUserEspol1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:id="@+id/lblLogin"
	        style="@style/title_activities"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login" />
    </LinearLayout>
    <!-- Username and Password -->
    <LinearLayout 
        android:id="@+id/lyUserEspol2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lyUserEspol1"
        android:layout_marginTop="120sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
	        style="@style/subtitles_activities"
	        android:id="@+id/lblUserName"
	        android:layout_width="100sp"
	        android:layout_height="wrap_content"
	        android:text="@string/username" />
        
        <AutoCompleteTextView 
            android:id="@+id/txtUserName"
            android:textColor="#fff"
            android:layout_width="160sp"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/lyUserEspol3"
        android:layout_below="@id/lyUserEspol2"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        style="@style/subtitles_activities"
	        android:id="@+id/lblPassword"
	        android:layout_width="100sp"
	        android:layout_height="wrap_content"
	        android:text="@string/password" />
        
        <AutoCompleteTextView 
            android:id="@+id/txtPassword"
            android:layout_width="160sp"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:layout_height="wrap_content" /> 
    </LinearLayout>
    
    <!-- Submit -->
    <LinearLayout 
        android:id="@+id/lyUserEspol4"
        android:layout_below="@id/lyUserEspol3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:id="@+id/btnLogin"
	        android:layout_marginTop="80sp"
	        style="@style/button"
	        android:layout_width="250sp"
	        android:layout_height="wrap_content"
	        android:text="@string/login" />
     </LinearLayout>
    

</RelativeLayout>
